Revert config file

--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,2 @@
-token: 'MzMzMjk3NDQyODg5OTI0NjA4.WWEVbg.e4TV_c-NpIkma_bm9i3mjFNyhpM'
-client_id: '312418351844425731'
-guild_ids: [333297904808755210]
+token: 'your token here'
+suffix: '!'
